--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,11 +1,19 @@
+
 use_frameworks!
+inhibit_all_warnings!
+
+platform :ios, '9.0'
+
+
+def core_pods
+	pod 'ScrubbedPhotoViewer', :path => '../'
+end
 
 target 'ScrubbedPhotoViewer_Example' do
-  pod 'ScrubbedPhotoViewer', :path => '../'
+	core_pods
+end
 
-  target 'ScrubbedPhotoViewer_Tests' do
-    inherit! :search_paths
-
-    pod 'FBSnapshotTestCase' , '~> 2.1.4'
-  end
+target 'ScrubbedPhotoViewer_Tests' do
+	core_pods
+#	pod 'FBSnapshotTestCase' , '~> 2.1.4'
 end
